feat: added AcademicYearController and document /academic-years
* feat: add AcademicYear model, mapper and create-request DTO

* feat: add AcademicYearService

* feat: added AcademicYearController and document /academic-years
